--- a/fly25/css/PhotoWall.css
+++ b/fly25/css/PhotoWall.css
@@ -4,18 +4,18 @@
 }
 
 body {
-	background: url(../img/bg.jpg) center;
+	background: url(../img/huohua-010.jpg) center;
 }
 .box{
-	width: 1300px;
+	width: 89%;
 	height: 100%;
 	margin: 0px auto;
-	margin-top: 100px;
+	margin-top: 10%;
 	position: relative;
 }
 .box .photo {
-	width: 300px;
-	height: 180px;
+	width: 32%;
+	height: 15%;
 	border: 5px solid azure;
 	box-shadow: -10px -10px 10px black;
 	transition: all 0.5s linear;
@@ -38,9 +38,9 @@ body {
 .cphoto{
 	transition: 0.5s;
 	transition: all 0.5s ease-in-out;
-	transform: scale(1.1);
+	transform: scale(0.7);
 	position: fixed;
-	top: calc(50% - 360px);
-	left: calc(50% - 640px);
+	top: calc(0px);
+	left: calc(0px);
 	z-index: 3;
 }
