--- a/fly25/css/PhotoWall.css
+++ b/fly25/css/PhotoWall.css
@@ -38,9 +38,10 @@ body {
 .cphoto{
 	transition: 0.5s;
 	transition: all 0.5s ease-in-out;
-	transform: scale(0.7);
+	transform: translate(-50%,-50%);
 	position: fixed;
-	top: calc(0px);
-	left: calc(0px);
+	width: 60%;
+	top: 50%;
+	left: 50%;
 	z-index: 3;
 }
